<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/intro_background"
    android:overScrollMode="never"
    android:requiresFadingEdge="vertical"
    android:scrollbars="none"
    android:paddingTop="24dp"
    android:clipToPadding="false"
    tools:context="ua.com.radiokot.feed.IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/logoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/imageLayerCircle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_layer_circle"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageLayerShadow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_layer_shadow"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageLayerSmoke"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_layer_smoke"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageLayerCup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logo_layer_cup"
                android:visibility="invisible" />

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/welcome_caption"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/icons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/welcome_description"
            android:textColor="@color/icons"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonIntroGo"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/welcome_get_started"
            android:textColor="@color/icons" />

        <TextView
            android:id="@+id/privacy_policy_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp"

            android:textColor="@color/icons"
            android:layout_marginTop="8dp"
            android:text="@string/privacy_policy"/>

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/double_margin" />
    </LinearLayout>
</ScrollView>
