<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:displayActivity="ua.com.radiokot.feed.FavoritesActivity">

    <com.github.ksoichiro.android.observablescrollview.ObservableListView
        android:id="@+id/listFavorites"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:animationCache="false"
        android:clipToPadding="false"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:fadingEdge="none"
        android:paddingTop="@dimen/toolbar_height"
        android:paddingBottom="@dimen/list_bottom_padding"
        android:scrollbars="none"
        android:scrollingCache="false"
        android:smoothScrollbar="true"
        android:cacheColorHint="#00000000"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="top"
        android:elevation="4dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:paddingTop="@dimen/toolbar_top_padding"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_activity_favorites"
            android:textColor="@color/primary_light"
            android:visibility="visible"/>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/textEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/favorites_empty_caption"
            android:textColor="@color/primary_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/favorites_empty_message"
            android:textColor="@color/secondary_text"
            android:gravity="center"/>

    </LinearLayout>

</FrameLayout>
